# In-Silico-DENV-Drug-Discovery

./: .gitignore  Docking and MD Simulation.ipynb  Molecular Docking + VQE.ipynb  Molecular Docking.ipynb  README.md  VQE-Optimized Molecular Docking.ipynb  VQE-Refined Drug Discovery.ipynb  hybrid_3D_CNN.ipynb  package-lock.json  package.json  test_dock_log.txt
PharmtomLabs/: working_notebook.ipynb
PharmtomLabs/resources/data/: refined_val.csv
PharmtomLabs/resources/docking_results/: ligand-2BMF.sdf
PharmtomLabs/resources/ligand/: ligand.mol  prepared_ligand.pdbqt
PharmtomLabs/resources/protein/: protein_2BMF.pqr
be/: .env  README.md  main.py  pyproject.toml  run_server.py
be/api/: docking.py  ligands.py  proteins.py
be/core/: config.py
be/models/: database.py
be/utils/: docking.py  molecular.py
data/: DENV2_RNA_Helicase_2_4A.pdbqt  ligand.pdbqt  output_dock_log.txt
docking_results/: ligand-2BMF-energies.csv  ligand-2BMF.pdbqt  ligand-2BMF.sdf
fe/: .env  index.html  package-lock.json  package.json  tailwind.config.ts
fe/src/: index.css
fe/src/components/: EnergyTable.tsx  FAQ.tsx  FileUploadSection.tsx  Footer.tsx  Hero.tsx  LigandViewer.tsx  Pricing.tsx  Problem.tsx  ProteinSearchSpaceViewer.tsx  SidebarStats.tsx  SocialProof.tsx  StepIndicator.tsx  Viewer3D.tsx
fe/src/hooks/: use-api.ts
fe/src/lib/: api.ts
fe/src/pages/: Dashboard.tsx
protein/: 2BMF.pdbqt  protein_2BMF.pqr
src/components/ui/: button.tsx
src/pages/: Index.tsx
