[project]
name = "be"
version = "0.1.0"
description = "FastAPI backend for protein-ligand interaction and molecular docking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
    # "rdkit-pypi>=2022.9.5",
    "biopython>=1.81",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "openmm>=8.0.0",
    # "pymol-open-source>=3.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["be"]

[tool.uv]
prerelease = "allow"